# VI_Curiosity_Project

./: .gitignore  LICENSE  README.md  onnx_adding_constants.py  pyproject.toml  setup_env.sh
Mario/: full_env.yml  train.py  train.sh
Mario/src/: agent.py  envs.py  models.py  utils.py
Pyramid/: ActorCritic.py  GymUnityTrain16.py  ICM16.py  ICMPPO16.py  Plots.ipynb  onnx_adding_constants.py  onnx_wrapper.py  unity_gym_env.py  unity_pettingzoo_base_env.py  utils.py
Pyramid/Environments/Pyramids16_linux_agents/Pyramids16_linux_agents_Data/: boot.config  globalgamemanagers.assets  level0
Pyramid/Environments/Pyramids16_linux_half_agents/Pyramids16_linux_half_agents_Data/: boot.config  level0
Pyramid/Environments/Pyramids16_linux_small_agents/Pyramids16_linux_half_agents_Data/: boot.config
Pyramid/Environments/Pyramids16_linux_small_agents/Pyramids16_linux_small_agents_Data/: boot.config  globalgamemanagers  level0  sharedassets0.assets
Pyramid/Environments/Pyramids16_windows_agents/UnityEnvironment_Data/: boot.config  globalgamemanagers  level0
Pyramid/Environments/Pyramids16_windows_half_agents/UnityEnvironment_Data/: boot.config  globalgamemanagers
Pyramid/Environments/Pyramids16_windows_small_agents/UnityEnvironment_Data/: boot.config  globalgamemanagers.assets  level0  sharedassets0.assets
Pyramid/Pyramid16_linux_half_agents/Pyramids16_linux_half_agents_Data/: boot.config  globalgamemanagers
Pyramid/Pyramid16half_agents/UnityEnvironment_Data/: ScriptingAssemblies.json  boot.config  globalgamemanagers  globalgamemanagers.assets  level0
Pyramid/Pyramid16half_agents/UnityEnvironment_Data/ML-Agents/Timers/: Pyramids16_timers.json
Pyramid/Pyramids16_linux_agents/Pyramids16_linux_agents_Data/: ScriptingAssemblies.json  boot.config  level0
Pyramid/Pyramids16_linux_half_agents/Pyramids16_linux_half_agents_Data/: RuntimeInitializeOnLoads.json  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
Pyramid/Pyramids16_windows_half_agents/UnityEnvironment_Data/: level0
Pyramid/Pyramids16half_agents/UnityEnvironment_Data/: boot.config  resources.assets  sharedassets0.assets
Pyramid/mlagents_envs/: environment.py
Pyramid/mlagents_envs/envs/: unity_pettingzoo_base_env.py
Pyramid/models/: ppo_orig.pt
Pyramid/models/both/: icm100.pt  icm300.pt  ppo100.pt  ppo300.pt
curiosity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+6 files in other folders)
