[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "curiosity"
version = "1.0.0"
description = "curiosity"
requires-python = ">=3.8"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "filelock==3.18.0",
    "grpcio==1.71.0",
    "gym==0.26.2",
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "onnx==1.17.0",
    "pettingzoo==1.15.0",
    "Pillow==11.2.1",
    "protobuf==3.20.3",
    "PyYAML==6.0.2",
    "tensorboard==2.19.0",
    "torch==2.7.0",
    "ipykernel",
]

[project.optional-dependencies]
dev = [
    "ipykernel",  # For Jupyter kernel (optional)
    "black",      # Optional dev tools
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/usercharly123/Curiosity"

[tool.setuptools.packages.find]
exclude = ["cfgs*", "assets*", "notebooks*"]

[tool.wheel]
exclude = ["cfgs*", "assets*", "notebooks*"]